@@ -1,5 +1,6 @@
 Revision history for Dancer-Plugin-Transformator
 
 {{$NEXT}}
+ - allow standalone service
 
 0.000 0000-00-00
